--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+
+nav {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+  h1 {
+    font-size: 4rem;
+    align-self: center;
+    padding-bottom: 1.5rem;
+  }
+  .menu {
+    align-self: center;
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+    a {
+      font-size: 1.5rem;
+      text-decoration: none;
+      color: black;
+      &:hover {
+        color: black;
+      }
+    }
+  }
+}
