--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,10 +20,12 @@ nav {
     a {
       font-size: 1.5rem;
       text-decoration: none;
-      color: black;
-      &:hover {
-        color: black;
-      }
+      .font-config();
+    }
+  }
+  @media @phone {
+    .menu {
+      width: 100% !important;
     }
   }
 }
