--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,3 @@
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  padding-top: 100px;
-  /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: #000000;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-  /* Modal Content */
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -186,10 +163,16 @@ p {
 nav {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  height: 11rem;
+  position: fixed;
+  background-color: white;
+  margin: -12rem auto 0;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
+  box-shadow: 0px 10px 46px 0px rgba(0, 0, 0, 0.75);
 }
 nav h1 {
   font-size: 4rem;
@@ -224,6 +207,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 12rem;
 }
 .home .intro img {
   width: 100%;
@@ -325,4 +311,46 @@ footer {
     width: 100%;
     margin: 0;
   }
+}
+.home .sign-up {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: #000000;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  /* Modal Content */
+  /* The Close Button */
+}
+.home .sign-up .modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+.home .sign-up .close {
+  color: #aaaaaa;
+  font-size: 28px;
+  font-weight: bold;
+}
+.home .sign-up .close:hover,
+.home .sign-up .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
