--- a/less/mixins.less
+++ b/less/mixins.less
@@ -26,7 +26,7 @@
   }
 }
 
-.modal {
+.sign-up-styles() {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -40,27 +40,26 @@
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 
   /* Modal Content */
-  .signUp() {
-    .modal-content {
-      background-color: #fefefe;
-      margin: auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-    }
 
-    /* The Close Button */
-    .close {
-      color: #aaaaaa;
-      font-size: 28px;
-      font-weight: bold;
-    }
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
 
-    .close:hover,
-    .close:focus {
-      color: #000;
-      text-decoration: none;
-      cursor: pointer;
-    }
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
   }
 }
