--- a/less/mixins.less
+++ b/less/mixins.less
@@ -30,7 +30,7 @@
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 30rem; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -47,6 +47,18 @@
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    form {
+      display: flex;
+      flex-direction: column;
+      input {
+        width: 100%;
+        padding: 12px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+      }
+    }
   }
 
   /* The Close Button */
